# BankToSure

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
src/: config.py  main.py
src/banktosure.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/categorizers/: groq_categorizer.py
src/core/: base.py  models.py  orchestrator.py
src/destinations/: sure.py
src/notifiers/: discord.py
src/providers/: fortuneo.py
